Bug 282898 [CSS] ETabFolder should support background color behind tab area

--- a/examples/org.eclipse.e4.ui.examples.legacy.workbench/css/webby.css
+++ b/examples/org.eclipse.e4.ui.examples.legacy.workbench/css/webby.css
@@ -7,9 +7,13 @@ ETabFolder {
 	margin: 3px;
 }
 
+ETabFolder.active {
+	background-color: rgb(224, 226, 235);
+}
+   
 ETabItem {
 	color: black;
-	background-color: rgb(246, 246, 251);
+	background-color: rgb(241, 240, 245);
 	font: normal;
 }
 
@@ -18,7 +22,7 @@ ETabItem:selected {
 }
 
 ETabItem.active {
-	background-color: rgb(224, 226, 235);
+	background-color: rgb(241, 240, 245);
 }
 
 ETabItem.active:selected {
